--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xmlmerge-js",
+  "name": "@smartface/xmlmerge-js",
   "description": "merge xml file",
   "version": "0.2.4",
   "main": "./xmlmerge.js",
@@ -13,13 +13,12 @@
     "heyutils": "*"
   },
   "repository": {
-    "url": "git://github.com/heysdk/xmlmerge-js.git"
+    "url": "https://github.com/SmartfaceIO/xmlmerge-js.git"
   },
   "author": "heysdk",
   "license": "MIT",
-  "homepage": "https://github.com/heysdk/xmlmerge-js",
+  "homepage": "https://github.com/SmartfaceIO/xmlmerge-js",
   "bugs": {
-    "url": "https://github.com/heysdk/xmlmerge-js/issues"
-  },
-  "readmeFilename": "README.md"
+    "url": "https://github.com/SmartfaceIO/xmlmerge-js/issues"
+  }
 }
