--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@smartface/xmlmerge-js",
+  "name": "@smartface/xmlmergejs",
   "description": "merge xml file",
-  "version": "0.2.5",
+  "version": "1.0.0",
   "main": "./xmlmerge.js",
   "keywords": [
     "xml",
